[gd_scene load_steps=22 format=1]

[ext_resource path="res://scenes/shop.gd" type="Script" id=1]
[ext_resource path="res://assets/back shop.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/papercuts-2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/on_game/hud/duit.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/button buy.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/button cancel.png" type="Texture" id=6]
[ext_resource path="res://assets/shops/pupuk toko.png" type="Texture" id=7]
[ext_resource path="res://assets/shops/air toko.png" type="Texture" id=8]
[ext_resource path="res://assets/shops/palm toko.png" type="Texture" id=9]
[ext_resource path="res://assets/shops/truk toko.png" type="Texture" id=10]
[ext_resource path="res://assets/shops/pabrik1 toko.png" type="Texture" id=11]
[ext_resource path="res://assets/shops/pabrik2 toko.png" type="Texture" id=12]
[ext_resource path="res://assets/pop up exit dan delete.png" type="Texture" id=13]
[ext_resource path="res://assets/buttons/button ok.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]

font/size = 42
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 38
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 22
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="Theme" id=4]

default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=8]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="GDScript" id=9]

script/source = "extends Container

func _ready():
	get_node(\"ok_konfirm\").connect(\"pressed\",self,\"_on_ok_pressed\")

func _on_ok_pressed():
	hide()"

[sub_resource type="DynamicFont" id=7]

font/size = 64
font/use_mipmaps = true
font/use_filter = true
font/font = ExtResource( 3 )

[node name="shop" type="Node2D"]

process/pause_mode = 2
z/z = 99
script/script = ExtResource( 1 )
H_PUPUK = 2
H_AIR = 4
H_SAWIT = 20
H_TRUK = 100
H_PABRIK = 300
H_PABRIKADV = 500

[node name="background" type="CanvasLayer" parent="."]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Sprite" type="Sprite" parent="background"]

transform/pos = Vector2( 512.5, 363.5 )
transform/scale = Vector2( 0.90531, 0.913098 )
texture = ExtResource( 2 )

[node name="nganu_label" type="Label" parent="background"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 309.0
margin/top = -5.0
margin/right = 737.0
margin/bottom = 124.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your Coins = "
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label" type="Label" parent="background"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 676.0
margin/top = -7.0
margin/right = 736.0
margin/bottom = 122.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "200"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="background/Label"]

visibility/behind_parent = true
transform/pos = Vector2( -1, 59 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
flip_h = true
flip_v = true
region = true
region_rect = Rect2( 508, 0.00100136, 1218, 392.656 )

[node name="tombols" type="CanvasLayer" parent="."]

layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="buy_button" type="TextureButton" parent="tombols"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 780.0
margin/top = 636.0
margin/right = 1116.0
margin/bottom = 753.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="cancel_button" type="TextureButton" parent="tombols"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 557.0
margin/top = 639.0
margin/right = 893.0
margin/bottom = 756.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="harga" type="Label" parent="tombols"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 118.0
margin/top = 648.0
margin/right = 340.0
margin/bottom = 705.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total = "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="shop_container" type="GridContainer" parent="tombols"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 155.0
margin/right = 686.0
margin/bottom = 375.0
custom_constants/vseparation = 220
custom_constants/hseparation = 300
columns = 3

[node name="pupuk" type="Container" parent="tombols/shop_container"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/pupuk"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 7 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/pupuk"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label" type="Label" parent="tombols/shop_container/pupuk"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 106.0
margin/top = 111.0
margin/right = 121.0
margin/bottom = 159.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/pupuk/Label"]

visibility/behind_parent = true
transform/pos = Vector2( 22, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="air" type="Container" parent="tombols/shop_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 0.0
margin/right = 300.0
margin/bottom = 0.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/air"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 8 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/air"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label1" type="Label" parent="tombols/shop_container/air"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 106.0
margin/top = 111.0
margin/right = 121.0
margin/bottom = 159.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/air/Label1"]

visibility/behind_parent = true
transform/pos = Vector2( 22, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="sawit" type="Container" parent="tombols/shop_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 0.0
margin/right = 600.0
margin/bottom = 0.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/sawit"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 9 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/sawit"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label2" type="Label" parent="tombols/shop_container/sawit"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 111.0
margin/right = 131.0
margin/bottom = 159.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "20"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/sawit/Label2"]

visibility/behind_parent = true
transform/pos = Vector2( 27, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="truk" type="Container" parent="tombols/shop_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 220.0
margin/right = 0.0
margin/bottom = 220.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/truk"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 10 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/truk"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label3" type="Label" parent="tombols/shop_container/truk"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 89.0
margin/top = 108.0
margin/right = 129.0
margin/bottom = 156.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/truk/Label3"]

visibility/behind_parent = true
transform/pos = Vector2( 34, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="pabrik" type="Container" parent="tombols/shop_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 300.0
margin/top = 220.0
margin/right = 300.0
margin/bottom = 220.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/pabrik"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 11 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/pabrik"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label4" type="Label" parent="tombols/shop_container/pabrik"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 92.0
margin/top = 110.0
margin/right = 137.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "300"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/pabrik/Label4"]

visibility/behind_parent = true
transform/pos = Vector2( 37, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="pabrik2" type="Container" parent="tombols/shop_container"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 600.0
margin/top = 220.0
margin/right = 600.0
margin/bottom = 220.0

[node name="Sprite" type="Sprite" parent="tombols/shop_container/pabrik2"]

transform/pos = Vector2( 117, 70 )
texture = ExtResource( 12 )

[node name="SpinBox" type="SpinBox" parent="tombols/shop_container/pabrik2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 4 )
margin/left = 55.0
margin/top = 154.0
margin/right = 189.0
margin/bottom = 197.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label5" type="Label" parent="tombols/shop_container/pabrik2"]

editor/display_folded = true
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 91.0
margin/top = 110.0
margin/right = 136.0
margin/bottom = 158.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "500"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite 2" type="Sprite" parent="tombols/shop_container/pabrik2/Label5"]

visibility/behind_parent = true
transform/pos = Vector2( 37, 22 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
region = true
region_rect = Rect2( 728, -4.252, 1006.2, 400.038 )

[node name="konfirmasi" type="CanvasLayer" parent="."]

layer = 5
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="popup_konfirmasi" type="Container" parent="konfirmasi"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 9 )

[node name="bg" type="TextureFrame" parent="konfirmasi/popup_konfirmasi"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
texture = ExtResource( 13 )
stretch_mode = 0

[node name="Label" type="Label" parent="konfirmasi/popup_konfirmasi"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 284.0
margin/top = 310.0
margin/right = 758.0
margin/bottom = 405.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.996094, 0, 0, 1 )
text = "Unsufficient Funds!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ok_konfirm" type="TextureButton" parent="konfirmasi/popup_konfirmasi"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 418.0
margin/top = 407.0
margin/right = 620.0
margin/bottom = 477.2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 14 )
params/resize_mode = 0
params/scale = Vector2( 0.6, 0.6 )
params/stretch_mode = 0

[connection signal="pressed" from="tombols/buy_button" to="." method="_on_buy_button_pressed"]

[connection signal="pressed" from="tombols/cancel_button" to="." method="_on_leave"]


